--- a/jupyter/alquiler/limpieza_alquiler.ipynb
+++ b/jupyter/alquiler/limpieza_alquiler.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "573a085f",
+   "id": "f1af1b92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "54c61089",
+   "id": "1c8665c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e806f206",
+   "id": "31a8f842",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "10b66d72",
+   "id": "56459018",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "44a4e00d",
+   "id": "bc9cfb4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0d38fe1f",
+   "id": "b9322e23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3820f9c8",
+   "id": "d4bd44d0",
    "metadata": {
     "scrolled": true
    },
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8c2b0f52",
+   "id": "c64bd7aa",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "67a8fb48",
+   "id": "1f831bef",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "53bbbc38",
+   "id": "128dc216",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e3679a1a",
+   "id": "06d183e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4f98a5ed",
+   "id": "e57891ac",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7bc57cb8",
+   "id": "60728a0e",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d742e137",
+   "id": "559d3dbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "44f56a29",
+   "id": "820b5a99",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7b3194b5",
+   "id": "67d87cb6",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8f3428bc",
+   "id": "6c3a92b7",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f384da13",
+   "id": "17337e39",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "24a1bca6",
+   "id": "77c2cbae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ec4a119d",
+   "id": "6275372c",
    "metadata": {
     "scrolled": true
    },
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "884849a3",
+   "id": "457a909b",
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "85577741",
+   "id": "7c0ecf39",
    "metadata": {
     "scrolled": true
    },
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e8a101fd",
+   "id": "8ffbbf26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "49e03b9e",
+   "id": "c189e46c",
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5d620362",
+   "id": "fc3e39d3",
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6ecc2e97",
+   "id": "4399e641",
    "metadata": {
     "scrolled": true
    },
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d7b8dfd2",
+   "id": "aba9ef8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c5a24b9e",
+   "id": "cba04dc4",
    "metadata": {
     "scrolled": true
    },
@@ -1415,7 +1415,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "65ba60b5",
+   "id": "05cd1d6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "76c559be",
+   "id": "49240304",
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a4469996",
+   "id": "686d98dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "29e8a7c2",
+   "id": "75c4680c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "36927f15",
+   "id": "bb2a26b1",
    "metadata": {
     "scrolled": true
    },
@@ -1577,7 +1577,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6b427fb7",
+   "id": "94ceebb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2d80c8df",
+   "id": "ebafb897",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "45b561d7",
+   "id": "75479c3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1617,7 +1617,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d0c09ad3",
+   "id": "6e476f24",
    "metadata": {
     "scrolled": true
    },
@@ -1629,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "5c9b2968",
+   "id": "ef7b3843",
    "metadata": {
     "scrolled": true
    },
@@ -1847,7 +1847,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f9048cc6",
+   "id": "978eb083",
    "metadata": {
     "scrolled": true
    },
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "9fef7a2a",
+   "id": "249c3f5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1888,7 +1888,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e957f428",
+   "id": "e916c5cb",
    "metadata": {},
    "outputs": [
     {
@@ -1917,7 +1917,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a11af3cf",
+   "id": "ddf74f9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1927,7 +1927,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "59926291",
+   "id": "b694a32d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1949,7 +1949,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "18f49656",
+   "id": "55b4e08e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1963,7 +1963,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "3255cb9c",
+   "id": "72dae30b",
    "metadata": {},
    "outputs": [
     {
@@ -1989,7 +1989,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0a650330",
+   "id": "aa183bce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ea2d14c4",
+   "id": "96208b9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2025,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f82c0881",
+   "id": "016413da",
    "metadata": {
     "scrolled": true
    },
@@ -2053,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "f96f05da",
+   "id": "0f3aaa3d",
    "metadata": {
     "scrolled": true
    },
@@ -2086,7 +2086,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ec6c914f",
+   "id": "a231373f",
    "metadata": {},
    "outputs": [
     {
@@ -5551,7 +5551,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "1e52f249",
+   "id": "f5414e91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5561,7 +5561,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "bfc61d2c",
+   "id": "7c3b2871",
    "metadata": {},
    "outputs": [
     {
@@ -5592,7 +5592,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "c814320f",
+   "id": "0daaddde",
    "metadata": {
     "scrolled": true
    },
@@ -5639,7 +5639,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "abe1249e",
+   "id": "26bb5879",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5649,7 +5649,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a0b0006b",
+   "id": "d856159e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5662,7 +5662,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "0d4ea572",
+   "id": "e5cce1d3",
    "metadata": {},
    "outputs": [
     {
@@ -5690,7 +5690,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "941f24ea",
+   "id": "e22b5e6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5700,7 +5700,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1fb47c62",
+   "id": "92d49e6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5713,7 +5713,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "3d2c12e9",
+   "id": "1ce47ecb",
    "metadata": {},
    "outputs": [
     {
@@ -5737,7 +5737,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e1e7a4ca",
+   "id": "b760ee61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5747,7 +5747,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "bbd32945",
+   "id": "9f4cd672",
    "metadata": {
     "scrolled": true
    },
@@ -6002,7 +6002,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8b04e6f5",
+   "id": "701606af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6016,7 +6016,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "6ccc0352",
+   "id": "766c0aed",
    "metadata": {
     "scrolled": true
    },
@@ -6102,7 +6102,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "0fda75cd",
+   "id": "50fe260a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6125,7 +6125,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "2cb980f7",
+   "id": "39bc189c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6141,7 +6141,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "561b1860",
+   "id": "f2657266",
    "metadata": {
     "scrolled": true
    },
@@ -6245,7 +6245,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "92ca56c1",
+   "id": "79fc13a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6265,7 +6265,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "8308d43a",
+   "id": "50ac5946",
    "metadata": {},
    "outputs": [
     {
@@ -6298,7 +6298,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "ff658878",
+   "id": "e8a3d0f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6310,7 +6310,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6f41f5e9",
+   "id": "8493888f",
    "metadata": {},
    "outputs": [
     {
@@ -6342,7 +6342,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "53ab5212",
+   "id": "8d1e0e81",
    "metadata": {},
    "outputs": [
     {
@@ -10008,7 +10008,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "913bc8d6",
+   "id": "ac26a893",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10018,7 +10018,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "9f95eda0",
+   "id": "348602a4",
    "metadata": {},
    "outputs": [
     {
@@ -10050,7 +10050,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "d24dc4b3",
+   "id": "fc45bcaa",
    "metadata": {
     "scrolled": true
    },
@@ -10317,7 +10317,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "8f8c3a56",
+   "id": "38b81bb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10327,7 +10327,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "047ed35f",
+   "id": "2a04b36d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10337,7 +10337,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "ef0c49e9",
+   "id": "12aeddec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10350,7 +10350,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "b065a5c8",
+   "id": "b9dd8918",
    "metadata": {},
    "outputs": [
     {
@@ -10371,7 +10371,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "e350267e",
+   "id": "80a549b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10387,7 +10387,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "5473407e",
+   "id": "d0702b86",
    "metadata": {
     "scrolled": true
    },
@@ -11393,7 +11393,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "75cf53ef",
+   "id": "e78cb649",
    "metadata": {},
    "outputs": [
     {
@@ -11620,7 +11620,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "c41bbb5c",
+   "id": "3c17c6c5",
    "metadata": {},
    "outputs": [
     {
@@ -11860,7 +11860,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "165d3b50",
+   "id": "e7c47da8",
    "metadata": {},
    "outputs": [
     {
@@ -12100,7 +12100,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "ad04d9d4",
+   "id": "05bb301c",
    "metadata": {
     "scrolled": true
    },
@@ -12342,7 +12342,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "2a8ed917",
+   "id": "6b09751e",
    "metadata": {
     "scrolled": true
    },
@@ -12463,7 +12463,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "f4ffdda2",
+   "id": "7aec8562",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12475,7 +12475,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "ef420af0",
+   "id": "2407d507",
    "metadata": {},
    "outputs": [
     {
@@ -12594,7 +12594,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "e62eb020",
+   "id": "fb09fcd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12606,7 +12606,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "88ad04c7",
+   "id": "8a7a956b",
    "metadata": {},
    "outputs": [
     {
@@ -12779,7 +12779,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "09982bd1",
+   "id": "24074531",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12791,7 +12791,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "5cca2921",
+   "id": "432592ff",
    "metadata": {},
    "outputs": [
     {
@@ -14372,7 +14372,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "78af2458",
+   "id": "a8da3712",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14384,7 +14384,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "7f0553f0",
+   "id": "f1d0628f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14396,7 +14396,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "c6771b52",
+   "id": "786b95c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14406,7 +14406,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "d592b659",
+   "id": "a578a5a8",
    "metadata": {},
    "outputs": [
     {
@@ -14439,7 +14439,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "4944d13a",
+   "id": "e65a4aed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14449,7 +14449,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "787ccdb2",
+   "id": "92b078bf",
    "metadata": {
     "scrolled": true
    },
@@ -14666,9 +14666,9 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "9d2ba9fc",
+   "id": "4a6bd238",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -14886,8 +14886,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "96f546a5",
+   "execution_count": 99,
+   "id": "74076555",
    "metadata": {},
    "outputs": [
     {
@@ -14904,7 +14904,7 @@
        "Name: precio, dtype: float64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14915,12 +14915,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "522a5b1a",
+   "execution_count": 100,
+   "id": "209fb8e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "alquiler.to_csv('madrid_alquiler_03.2024.csv')"
+    "alquiler.to_csv('madrid_alquiler_03.2024.csv', index=False)"
    ]
   }
  ],
