--- a/jupyter/venta_madrid centro/limpieza_madrid_centro.ipynb
+++ b/jupyter/venta_madrid centro/limpieza_madrid_centro.ipynb
@@ -2899,7 +2899,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "madrid_centro.to_csv('madrid_centro_compra_03.2024.csv')"
+    "madrid_centro.to_csv('madrid_centro_compra_03.2024.csv', index=False)"
    ]
   }
  ],
