--- a/jupyter/modelo_recom/modelo_recom.ipynb
+++ b/jupyter/modelo_recom/modelo_recom.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "78d7d3e3",
+   "id": "098ee179",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eb1e6bc8",
+   "id": "ce67345d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,324 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "cc42c611",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alquiler['rating'] = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "51810d4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>descripcion</th>\n",
+       "      <th>zona</th>\n",
+       "      <th>precio</th>\n",
+       "      <th>superficie</th>\n",
+       "      <th>habitaciones</th>\n",
+       "      <th>plantas</th>\n",
+       "      <th>caract</th>\n",
+       "      <th>ascensor</th>\n",
+       "      <th>garaje</th>\n",
+       "      <th>€/m2</th>\n",
+       "      <th>zona_€/m2</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>arganzuela</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>21.037674</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>arganzuela</td>\n",
+       "      <td>700.0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>21.037674</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>arganzuela</td>\n",
+       "      <td>790.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19.750000</td>\n",
+       "      <td>21.037674</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>arganzuela</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>21.037674</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>arganzuela</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22.857143</td>\n",
+       "      <td>21.037674</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8177</th>\n",
+       "      <td>0</td>\n",
+       "      <td>villaverde</td>\n",
+       "      <td>1465.0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32.555556</td>\n",
+       "      <td>15.340223</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8178</th>\n",
+       "      <td>3</td>\n",
+       "      <td>villaverde</td>\n",
+       "      <td>1475.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.046875</td>\n",
+       "      <td>15.340223</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8179</th>\n",
+       "      <td>0</td>\n",
+       "      <td>villaverde</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.666667</td>\n",
+       "      <td>15.340223</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8180</th>\n",
+       "      <td>0</td>\n",
+       "      <td>villaverde</td>\n",
+       "      <td>1895.0</td>\n",
+       "      <td>80</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.687500</td>\n",
+       "      <td>15.340223</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8181</th>\n",
+       "      <td>0</td>\n",
+       "      <td>villaverde</td>\n",
+       "      <td>2300.0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35.384615</td>\n",
+       "      <td>15.340223</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8182 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      descripcion        zona  precio  superficie  habitaciones  plantas  \\\n",
+       "0               4  arganzuela   600.0          25             0        3   \n",
+       "1               0  arganzuela   700.0          35             2        0   \n",
+       "2               0  arganzuela   790.0          40             1        1   \n",
+       "3               4  arganzuela   800.0          40             0        3   \n",
+       "4               0  arganzuela   800.0          35             1        4   \n",
+       "...           ...         ...     ...         ...           ...      ...   \n",
+       "8177            0  villaverde  1465.0          45             1        6   \n",
+       "8178            3  villaverde  1475.0          64             2        5   \n",
+       "8179            0  villaverde  1500.0          90             4        6   \n",
+       "8180            0  villaverde  1895.0          80             2        0   \n",
+       "8181            0  villaverde  2300.0          65             2        1   \n",
+       "\n",
+       "      caract  ascensor  garaje       €/m2  zona_€/m2 rating  \n",
+       "0          3         3       0  24.000000  21.037674         \n",
+       "1          1         0       0  20.000000  21.037674         \n",
+       "2          0         1       0  19.750000  21.037674         \n",
+       "3          3         3       0  20.000000  21.037674         \n",
+       "4          0         1       0  22.857143  21.037674         \n",
+       "...      ...       ...     ...        ...        ...    ...  \n",
+       "8177       1         1       0  32.555556  15.340223         \n",
+       "8178       1         1       0  23.046875  15.340223         \n",
+       "8179       1         1       0  16.666667  15.340223         \n",
+       "8180       1         1       0  23.687500  15.340223         \n",
+       "8181       3         0       0  35.384615  15.340223         \n",
+       "\n",
+       "[8182 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alquiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a03ab6e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alquiler.loc[(alquiler['€/m2'] >= alquiler['zona_€/m2']) & (alquiler['ascensor']==0) & (alquiler['plantas'].isin([-2, -1, 0, 1])), 'rating'] = 1\n",
+    "alquiler.loc[(alquiler['€/m2'] >= alquiler['zona_€/m2']) & (alquiler['ascensor']==1) & (alquiler['plantas'].isin([range(2,30)]) & (alquiler['caract']==1)), 'rating'] = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ee432dfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rating\n",
+       "     7777\n",
+       "1     405\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alquiler.rating.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ebba4d95",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "type 'range' is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mrange\u001b[39m[\u001b[38;5;241m2\u001b[39m:\u001b[38;5;241m30\u001b[39m:\u001b[38;5;241m1\u001b[39m]\n",
+      "\u001b[1;31mTypeError\u001b[0m: type 'range' is not subscriptable"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6c3cf17b",
+   "id": "ec099904",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -36,39 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cce2189b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbebe0c6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13b399c6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bfa34b17",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccded745",
+   "id": "e02874df",
    "metadata": {},
    "outputs": [],
    "source": []
