--- a/jupyter/venta_madrid_ext/limpieza_madrid_ext.ipynb
+++ b/jupyter/venta_madrid_ext/limpieza_madrid_ext.ipynb
@@ -14325,6 +14325,209 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "id": "ec6194d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>descripcion</th>\n",
+       "      <th>zona</th>\n",
+       "      <th>precio</th>\n",
+       "      <th>superficie</th>\n",
+       "      <th>habitaciones</th>\n",
+       "      <th>plantas</th>\n",
+       "      <th>caract</th>\n",
+       "      <th>ascensor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12003</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ext_sur</td>\n",
+       "      <td>345</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12005</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ext_sur</td>\n",
+       "      <td>590</td>\n",
+       "      <td>120</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12006</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ext_sur</td>\n",
+       "      <td>590</td>\n",
+       "      <td>80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12010</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ext_sur</td>\n",
+       "      <td>621</td>\n",
+       "      <td>72</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12011</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ext_sur</td>\n",
+       "      <td>623</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11326</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ext_norte</td>\n",
+       "      <td>25989999999999997</td>\n",
+       "      <td>259</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11327</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ext_norte</td>\n",
+       "      <td>25999900000000003</td>\n",
+       "      <td>80</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6484</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ext_noroeste</td>\n",
+       "      <td>26189999999999997</td>\n",
+       "      <td>85</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2911</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ext_noroeste</td>\n",
+       "      <td>51295000000000006</td>\n",
+       "      <td>174</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2926</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ext_noroeste</td>\n",
+       "      <td>51779999999999994</td>\n",
+       "      <td>174</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>18003 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       descripcion          zona             precio  superficie  habitaciones  \\\n",
+       "12003            0       ext_sur                345          54             1   \n",
+       "12005            1       ext_sur                590         120             3   \n",
+       "12006            0       ext_sur                590          80             3   \n",
+       "12010            0       ext_sur                621          72             3   \n",
+       "12011            0       ext_sur                623          60             3   \n",
+       "...            ...           ...                ...         ...           ...   \n",
+       "11326            1     ext_norte  25989999999999997         259             5   \n",
+       "11327            0     ext_norte  25999900000000003          80             3   \n",
+       "6484             1  ext_noroeste  26189999999999997          85             2   \n",
+       "2911             1  ext_noroeste  51295000000000006         174             4   \n",
+       "2926             1  ext_noroeste  51779999999999994         174             4   \n",
+       "\n",
+       "       plantas  caract  ascensor  \n",
+       "12003        0       3         0  \n",
+       "12005       -4       2         2  \n",
+       "12006        0       3         1  \n",
+       "12010        1       3         0  \n",
+       "12011        1       3         0  \n",
+       "...        ...     ...       ...  \n",
+       "11326       -4       2         2  \n",
+       "11327        3       3         3  \n",
+       "6484        -4       2         2  \n",
+       "2911        -4       2         2  \n",
+       "2926        -4       2         2  \n",
+       "\n",
+       "[18003 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "madrid_ext.sort_values(by='precio')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 98,
    "id": "4a39a16a",
    "metadata": {},
