--- a/jupyter/analisis_exploratorio/analisis_explo.ipynb
+++ b/jupyter/analisis_exploratorio/analisis_explo.ipynb
@@ -4454,7 +4454,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "32cb895f",
+   "id": "611b37ca",
    "metadata": {},
    "outputs": [
     {
@@ -6377,7 +6377,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "07395f5e",
+   "id": "8c7b41f3",
    "metadata": {},
    "outputs": [
     {
@@ -6702,7 +6702,9 @@
    "cell_type": "code",
    "execution_count": 95,
    "id": "6981df7d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -6952,6 +6954,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b950b0cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8804a00",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d94349db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f93c1825",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3ccbca02",
    "metadata": {},
    "outputs": [],
@@ -6963,7 +6997,9 @@
    "id": "354c18ad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "."
+   ]
   },
   {
    "cell_type": "code",
