--- a/jupyter/analisis_exploratorio/analisis_explo.ipynb
+++ b/jupyter/analisis_exploratorio/analisis_explo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 116,
    "id": "f29e53dc",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "import numpy as np\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.max_rows', 200)\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "pd.set_option('display.float_format', '{:.2f}'.format)"
    ]
   },
   {
@@ -4499,7 +4500,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "01ba15f0",
+   "id": "09a9dbd4",
    "metadata": {},
    "outputs": [
     {
@@ -5361,7 +5362,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "7c02ff88",
+   "id": "c4fb8f31",
    "metadata": {
     "scrolled": true
    },
@@ -5389,7 +5390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d35430d9",
+   "id": "7bab048f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5421,7 +5422,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "6523888c",
+   "id": "4a70ca75",
    "metadata": {},
    "outputs": [
     {
@@ -5997,34 +5998,397 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3b47c85c",
+   "execution_count": 108,
+   "id": "ea300ace",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "alq_int = alquiler[alquiler['zona']=='central']\n",
+    "alq_ext = alquiler[alquiler['zona']=='exterior']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b001490b",
+   "execution_count": 112,
+   "id": "14b3fad5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "distrito\n",
+       "barrio de salamanca    3380.434692\n",
+       "chamberi               2614.293814\n",
+       "hortaleza              2567.195918\n",
+       "chamartin              2556.775194\n",
+       "retiro                 2519.481605\n",
+       "moncloa                2344.992424\n",
+       "centro                 2163.580364\n",
+       "fuencarral             1930.727273\n",
+       "tetuan                 1723.585799\n",
+       "arganzuela             1530.949664\n",
+       "ciudad lineal          1481.473430\n",
+       "barajas                1312.333333\n",
+       "san blas               1209.013986\n",
+       "moratalaz              1203.750000\n",
+       "vicalvaro              1203.685714\n",
+       "latina                 1181.094891\n",
+       "carabanchel            1167.688525\n",
+       "usera                  1133.242857\n",
+       "puente de vallecas     1051.457143\n",
+       "villa de vallecas      1047.074627\n",
+       "villaverde             1022.743902\n",
+       "Name: precio, dtype: float64"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alq_int.groupby('distrito')['precio'].mean().sort_values(ascending=False)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a2347d86",
+   "execution_count": 113,
+   "id": "2de0e60e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "distrito\n",
+       "norte                  3667.653495\n",
+       "noroeste               2339.275613\n",
+       "sureste                1140.373626\n",
+       "corredor de henares    1098.802198\n",
+       "suroeste               1095.575758\n",
+       "sur                    1045.674419\n",
+       "Name: precio, dtype: float64"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alq_ext.groupby('distrito')['precio'].mean().sort_values(ascending=False)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e1539ffb",
+   "execution_count": 117,
+   "id": "21ce3f3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "distrito\n",
+       "barrio de salamanca   1468394.55\n",
+       "chamartin             1418319.72\n",
+       "moncloa               1317128.66\n",
+       "chamberi              1154868.96\n",
+       "retiro                 921524.19\n",
+       "hortaleza              883195.68\n",
+       "centro                 768707.07\n",
+       "fuencarral             731993.14\n",
+       "tetuan                 557069.39\n",
+       "barajas                463883.96\n",
+       "ciudad lineal          455608.37\n",
+       "arganzuela             435468.10\n",
+       "san blas               338718.83\n",
+       "vicalvaro              312479.53\n",
+       "villa de vallecas      273725.32\n",
+       "moratalaz              268768.03\n",
+       "latina                 241710.39\n",
+       "usera                  226138.48\n",
+       "carabanchel            220925.17\n",
+       "puente de vallecas     176386.64\n",
+       "villaverde             165198.89\n",
+       "Name: precio, dtype: float64"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mad_int.groupby('distrito')['precio'].mean().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "51d3b87b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "distrito\n",
+       "norte                  804926.813462\n",
+       "noroeste               756146.571578\n",
+       "sureste                275256.783173\n",
+       "corredor de henares    269796.312951\n",
+       "suroeste               268427.570593\n",
+       "sur                    253366.712723\n",
+       "Name: precio, dtype: float64"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mad_ext.groupby('distrito')['precio'].mean().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "7c9cb612",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17824, 11)"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mad_int.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "57ec5b4a",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def filter_percentiles(group):\n",
+    "    q25 = group['precio'].quantile(0.25)\n",
+    "    q75 = group['precio'].quantile(0.75)\n",
+    "    return group[(group['precio'] >= q25) & (group['precio'] <= q75)]\n",
+    "\n",
+    "nuevos_dataframes = mad_int.groupby('distrito').apply(filter_percentiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "8422d25f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "distrito\n",
+      "arganzuela             406255.48\n",
+      "barajas                378814.31\n",
+      "barrio de salamanca   1038569.46\n",
+      "carabanchel            202275.91\n",
+      "centro                 699582.11\n",
+      "chamartin             1116495.29\n",
+      "chamberi               868501.18\n",
+      "ciudad lineal          342956.26\n",
+      "fuencarral             571017.09\n",
+      "hortaleza              591267.20\n",
+      "latina                 211349.85\n",
+      "moncloa                985003.23\n",
+      "moratalaz              244460.37\n",
+      "puente de vallecas     160995.74\n",
+      "retiro                 691587.64\n",
+      "san blas               254138.34\n",
+      "tetuan                 426675.30\n",
+      "usera                  193439.50\n",
+      "vicalvaro              305391.35\n",
+      "villa de vallecas      244551.54\n",
+      "villaverde             153457.28\n",
+      "Name: precio, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "percentiles = mad_int.groupby('distrito')['precio'].quantile([0.25, 0.75]).unstack(level=1)\n",
+    "\n",
+    "# Filtrar los datos dentro de los percentiles 25 y 75\n",
+    "datos_filtrados = mad_int.merge(percentiles, on='distrito')\n",
+    "datos_filtrados = datos_filtrados[(datos_filtrados['precio'] >= datos_filtrados[0.25]) & (datos_filtrados['precio'] <= datos_filtrados[0.75])]\n",
+    "\n",
+    "# Calcular la media de precio por distrito en los nuevos DataFrames filtrados\n",
+    "media_por_distrito_filtrados = datos_filtrados.groupby('distrito')['precio'].mean()\n",
+    "\n",
+    "print(media_por_distrito_filtrados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "20168640",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "distrito\n",
+      "arganzuela            1483.94\n",
+      "barajas               1332.86\n",
+      "barrio de salamanca   2706.47\n",
+      "carabanchel           1083.67\n",
+      "centro                1830.68\n",
+      "chamartin             1913.67\n",
+      "chamberi              2263.76\n",
+      "ciudad lineal         1290.56\n",
+      "fuencarral            1664.79\n",
+      "hortaleza             1838.61\n",
+      "latina                1173.92\n",
+      "moncloa               1714.08\n",
+      "moratalaz             1207.19\n",
+      "puente de vallecas     987.64\n",
+      "retiro                1956.51\n",
+      "san blas              1141.95\n",
+      "tetuan                1510.39\n",
+      "usera                 1045.76\n",
+      "vicalvaro             1185.47\n",
+      "villa de vallecas     1021.00\n",
+      "villaverde             968.60\n",
+      "Name: precio, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "percentiles = alq_int.groupby('distrito')['precio'].quantile([0.25, 0.75]).unstack(level=1)\n",
+    "\n",
+    "# Filtrar los datos dentro de los percentiles 25 y 75\n",
+    "datos_filtrados = alq_int.merge(percentiles, on='distrito')\n",
+    "datos_filtrados = datos_filtrados[(datos_filtrados['precio'] >= datos_filtrados[0.25]) & (datos_filtrados['precio'] <= datos_filtrados[0.75])]\n",
+    "\n",
+    "# Calcular la media de precio por distrito en los nuevos DataFrames filtrados\n",
+    "media_por_distrito_filtrados = datos_filtrados.groupby('distrito')['precio'].mean()\n",
+    "\n",
+    "print(media_por_distrito_filtrados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "2fc9e6b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "distrito\n",
+      "corredor de henares   233271.47\n",
+      "noroeste              561604.46\n",
+      "norte                 434865.79\n",
+      "sur                   220847.43\n",
+      "sureste               227817.50\n",
+      "suroeste              220877.97\n",
+      "Name: precio, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "percentiles = mad_ext.groupby('distrito')['precio'].quantile([0.25, 0.75]).unstack(level=1)\n",
+    "\n",
+    "# Filtrar los datos dentro de los percentiles 25 y 75\n",
+    "datos_filtrados = mad_ext.merge(percentiles, on='distrito')\n",
+    "datos_filtrados = datos_filtrados[(datos_filtrados['precio'] >= datos_filtrados[0.25]) & (datos_filtrados['precio'] <= datos_filtrados[0.75])]\n",
+    "\n",
+    "# Calcular la media de precio por distrito en los nuevos DataFrames filtrados\n",
+    "media_por_distrito_filtrados = datos_filtrados.groupby('distrito')['precio'].mean()\n",
+    "\n",
+    "print(media_por_distrito_filtrados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "c1ee4a50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "distrito\n",
+      "corredor de henares   1047.39\n",
+      "noroeste              1736.47\n",
+      "norte                 2885.44\n",
+      "sur                   1012.50\n",
+      "sureste                990.20\n",
+      "suroeste               941.97\n",
+      "Name: precio, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "percentiles = alq_ext.groupby('distrito')['precio'].quantile([0.25, 0.75]).unstack(level=1)\n",
+    "\n",
+    "# Filtrar los datos dentro de los percentiles 25 y 75\n",
+    "datos_filtrados = alq_ext.merge(percentiles, on='distrito')\n",
+    "datos_filtrados = datos_filtrados[(datos_filtrados['precio'] >= datos_filtrados[0.25]) & (datos_filtrados['precio'] <= datos_filtrados[0.75])]\n",
+    "\n",
+    "# Calcular la media de precio por distrito en los nuevos DataFrames filtrados\n",
+    "media_por_distrito_filtrados = datos_filtrados.groupby('distrito')['precio'].mean()\n",
+    "\n",
+    "print(media_por_distrito_filtrados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "3e39656f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "distrito\n",
+      "arganzuela            1483.94\n",
+      "barajas               1332.86\n",
+      "barrio de salamanca   2706.47\n",
+      "carabanchel           1083.67\n",
+      "centro                1830.68\n",
+      "chamartin             1913.67\n",
+      "chamberi              2263.76\n",
+      "ciudad lineal         1290.56\n",
+      "fuencarral            1664.79\n",
+      "hortaleza             1838.61\n",
+      "latina                1173.92\n",
+      "moncloa               1714.08\n",
+      "moratalaz             1207.19\n",
+      "puente de vallecas     987.64\n",
+      "retiro                1956.51\n",
+      "san blas              1141.95\n",
+      "tetuan                1510.39\n",
+      "usera                 1045.76\n",
+      "vicalvaro             1185.47\n",
+      "villa de vallecas     1021.00\n",
+      "villaverde             968.60\n",
+      "Name: precio, dtype: float64\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
