--- a/jupyter/analisis_exploratorio/analisis_explo.ipynb
+++ b/jupyter/analisis_exploratorio/analisis_explo.ipynb
@@ -5123,7 +5123,9 @@
    "cell_type": "code",
    "execution_count": 81,
    "id": "f5578b69",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5171,6 +5173,60 @@
     "\n",
     "for index, row in resultado.iterrows():\n",
     "    print(f\"({row['distrito']}: {row['precio_x']}, {row['precio_y']}, Diferencia: {row['diferencia']})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "a9734adc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(villaverde: 1022.7439024390244, 165198.89349112427, Porcentaje: 0.6190985186556192)\n",
+      "(puente de vallecas: 1051.4571428571428, 176386.6351829988, Porcentaje: 0.5961093037271615)\n",
+      "(carabanchel: 1167.688524590164, 220925.1717171717, Porcentaje: 0.5285448079610585)\n",
+      "(usera: 1133.2428571428572, 226138.47899159664, Porcentaje: 0.5011278320240974)\n",
+      "(latina: 1181.094890510949, 241710.39323843416, Porcentaje: 0.4886405068009893)\n",
+      "(norte: 3667.6534954407293, 804926.8134615384, Porcentaje: 0.45565055531796866)\n",
+      "(moratalaz: 1203.75, 268768.0304878049, Porcentaje: 0.4478769285972124)\n",
+      "(sureste: 1140.3736263736264, 275256.7831733484, Porcentaje: 0.4142944683239481)\n",
+      "(sur: 1045.6744186046512, 253366.71272294887, Porcentaje: 0.41271183864948907)\n",
+      "(suroeste: 1095.5757575757575, 268427.5705931495, Porcentaje: 0.4081457635498629)\n",
+      "(corredor de henares: 1098.8021978021977, 269796.31295116775, Porcentaje: 0.40727102078710664)\n",
+      "(vicalvaro: 1203.6857142857143, 312479.5272206304, Porcentaje: 0.385204664443772)\n",
+      "(villa de vallecas: 1047.0746268656717, 273725.31964809383, Porcentaje: 0.38252750173488137)\n",
+      "(san blas: 1209.013986013986, 338718.8279411765, Porcentaje: 0.3569373433897064)\n",
+      "(arganzuela: 1530.9496644295302, 435468.09643916914, Porcentaje: 0.3515641391293953)\n",
+      "(ciudad lineal: 1481.4734299516908, 455608.37111111113, Porcentaje: 0.32516378624448006)\n",
+      "(tetuan: 1723.585798816568, 557069.3853296193, Porcentaje: 0.3094023552912925)\n",
+      "(noroeste: 2339.275613275613, 756146.5715776294, Porcentaje: 0.30936801160057265)\n",
+      "(hortaleza: 2567.195918367347, 883195.6795646916, Porcentaje: 0.2906712496185062)\n",
+      "(barajas: 1312.3333333333333, 463883.9583333333, Porcentaje: 0.28290121047693767)\n",
+      "(centro: 2163.580364212193, 768707.0651096957, Porcentaje: 0.2814570676416831)\n",
+      "(retiro: 2519.4816053511704, 921524.1877862596, Porcentaje: 0.27340374118704575)\n",
+      "(fuencarral: 1930.7272727272727, 731993.1402359109, Porcentaje: 0.26376302817606007)\n",
+      "(barrio de salamanca: 3380.4346917450366, 1468394.5462147887, Porcentaje: 0.2302129696993961)\n",
+      "(chamberi: 2614.2938144329896, 1154868.961130742, Porcentaje: 0.22637146744971937)\n",
+      "(chamartin: 2556.7751937984494, 1418319.7234262126, Porcentaje: 0.18026790092307876)\n",
+      "(moncloa: 2344.992424242424, 1317128.6561443068, Porcentaje: 0.17803822073896955)\n"
+     ]
+    }
+   ],
+   "source": [
+    "media_alq = alquiler.groupby('distrito')['precio'].mean().reset_index()\n",
+    "media_com = mad_total.groupby('distrito')['precio'].mean().reset_index()\n",
+    "\n",
+    "resultado = media_alq.merge(media_com, on='distrito')\n",
+    "\n",
+    "resultado['percen'] = resultado['precio_x']*100 / resultado['precio_y']\n",
+    "\n",
+    "resultado = resultado.sort_values(by='percen', ascending=False)\n",
+    "\n",
+    "for index, row in resultado.iterrows():\n",
+    "    print(f\"({row['distrito']}: {row['precio_x']}, {row['precio_y']}, Porcentaje: {row['percen']})\")"
    ]
   },
   {
@@ -7373,11 +7429,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "id": "4a7bfafb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(villaverde: 1022.7439024390244, 165198.89349112427, Porcentaje: 0.6190985186556192)\n",
+      "(puente de vallecas: 1051.4571428571428, 176386.6351829988, Porcentaje: 0.5961093037271615)\n",
+      "(carabanchel: 1167.688524590164, 220925.1717171717, Porcentaje: 0.5285448079610585)\n",
+      "(usera: 1133.2428571428572, 226138.47899159664, Porcentaje: 0.5011278320240974)\n",
+      "(latina: 1181.094890510949, 241710.39323843416, Porcentaje: 0.4886405068009893)\n",
+      "(norte: 3667.6534954407293, 804926.8134615384, Porcentaje: 0.45565055531796866)\n",
+      "(moratalaz: 1203.75, 268768.0304878049, Porcentaje: 0.4478769285972124)\n",
+      "(sureste: 1140.3736263736264, 275256.7831733484, Porcentaje: 0.4142944683239481)\n",
+      "(sur: 1045.6744186046512, 253366.71272294887, Porcentaje: 0.41271183864948907)\n",
+      "(suroeste: 1095.5757575757575, 268427.5705931495, Porcentaje: 0.4081457635498629)\n",
+      "(corredor de henares: 1098.8021978021977, 269796.31295116775, Porcentaje: 0.40727102078710664)\n",
+      "(vicalvaro: 1203.6857142857143, 312479.5272206304, Porcentaje: 0.385204664443772)\n",
+      "(villa de vallecas: 1047.0746268656717, 273725.31964809383, Porcentaje: 0.38252750173488137)\n",
+      "(san blas: 1209.013986013986, 338718.8279411765, Porcentaje: 0.3569373433897064)\n",
+      "(arganzuela: 1530.9496644295302, 435468.09643916914, Porcentaje: 0.3515641391293953)\n",
+      "(ciudad lineal: 1481.4734299516908, 455608.37111111113, Porcentaje: 0.32516378624448006)\n",
+      "(tetuan: 1723.585798816568, 557069.3853296193, Porcentaje: 0.3094023552912925)\n",
+      "(noroeste: 2339.275613275613, 756146.5715776294, Porcentaje: 0.30936801160057265)\n",
+      "(hortaleza: 2567.195918367347, 883195.6795646916, Porcentaje: 0.2906712496185062)\n",
+      "(barajas: 1312.3333333333333, 463883.9583333333, Porcentaje: 0.28290121047693767)\n",
+      "(centro: 2163.580364212193, 768707.0651096957, Porcentaje: 0.2814570676416831)\n",
+      "(retiro: 2519.4816053511704, 921524.1877862596, Porcentaje: 0.27340374118704575)\n",
+      "(fuencarral: 1930.7272727272727, 731993.1402359109, Porcentaje: 0.26376302817606007)\n",
+      "(barrio de salamanca: 3380.4346917450366, 1468394.5462147887, Porcentaje: 0.2302129696993961)\n",
+      "(chamberi: 2614.2938144329896, 1154868.961130742, Porcentaje: 0.22637146744971937)\n",
+      "(chamartin: 2556.7751937984494, 1418319.7234262126, Porcentaje: 0.18026790092307876)\n",
+      "(moncloa: 2344.992424242424, 1317128.6561443068, Porcentaje: 0.17803822073896955)\n"
+     ]
+    }
+   ],
+   "source": [
+    "media_alq = alquiler.groupby('distrito')['precio'].mean().reset_index()\n",
+    "media_com = mad_total.groupby('distrito')['precio'].mean().reset_index()\n",
+    "\n",
+    "resultado = media_alq.merge(media_com, on='distrito')\n",
+    "\n",
+    "resultado['percen'] = resultado['precio_x']*100 / resultado['precio_y']\n",
+    "\n",
+    "resultado = resultado.sort_values(by='percen', ascending=False)\n",
+    "\n",
+    "for index, row in resultado.iterrows():\n",
+    "    print(f\"({row['distrito']}: {row['precio_x']}, {row['precio_y']}, Porcentaje: {row['percen']})\")"
+   ]
   },
   {
    "cell_type": "code",
